--- a/style.css
+++ b/style.css
@@ -141,3 +141,38 @@ h2 {
     padding: 2rem 1rem;
   }
 }
+
+@media (max-width: 600px) {
+  .profile-pic {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-width: 3px;
+  }
+
+  .content {
+    margin-top: 20px;
+    padding: 0 15px;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  h2 {
+    font-size: 1.2em;
+  }
+
+  p {
+    font-size: 1em;
+    line-height: 1.6;
+  }
+
+  .skills-box {
+    width: 90%;
+    margin: 25px auto;
+    padding: 15px;
+  }
+}
+
+
